<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceScreen android:title="@string/pref_general">
    <PreferenceCategory
      android:title="@string/pref_general">
      <CheckBoxPreference
        android:defaultValue="false"
        android:key="resolve_hosts"
        android:title="@string/pref_resolve_hosts_title"
        android:summary="@string/pref_resolve_hosts_summary" />
      <CheckBoxPreference
        android:defaultValue="true"
        android:key="resolve_ports"
        android:title="@string/pref_resolve_ports_title"
        android:summary="@string/pref_resolve_ports_summary" />
      <CheckBoxPreference
        android:defaultValue="false"
        android:key="copy_original_addrs"
        android:title="@string/pref_copy_addrs_title"
        android:summary="@string/pref_copy_addrs_summary" />
      <Preference
        android:persistent="false"
        android:key="filter_dialog"
        android:title="@string/pref_filter_title"
        android:summary="@string/pref_filter_summary" />
      <ListPreference
        android:defaultValue="14400000"
        android:key="history_size"
        android:title="@string/pref_history_size_title"
        android:summary="@string/pref_history_size_summary"
        android:entries="@array/history_timerange_entries"
        android:entryValues="@array/history_timerange_values"
        android:dialogTitle="@string/history_load" />
      <Preference
        android:persistent="false"
        android:key="clear_log"
        android:title="@string/pref_clearlog_title"
        android:summary="@string/pref_clearlog_summary" />
      <CheckBoxPreference
        android:defaultValue="true"
        android:key="confirm_exit"
        android:title="@string/pref_confirm_exit_title"
        android:summary="@string/pref_confirm_exit_summary" />
    </PreferenceCategory>

    <PreferenceCategory
      android:title="@string/pref_log_tab">
      <EditTextPreference
        android:defaultValue="150000"
        android:numeric="integer"
        android:key="max_log_entries"
        android:title="@string/pref_max_log_entries_title"
        android:summary="@string/pref_max_log_entries_summary" />
    </PreferenceCategory>

    <PreferenceCategory
      android:title="@string/pref_apps_tab">
      <ListPreference
        android:defaultValue="NAME"
        android:key="presort_by"
        android:title="@string/pref_presort_by_title"
        android:summary="@string/pref_presort_by_summary"
        android:entries="@array/presort_method"
        android:entryValues="@array/presort_method_values"
        android:dialogTitle="@string/pref_presort_by_dialog_title" />
      <ListPreference
        android:defaultValue="BYTES"
        android:key="sort_by"
        android:title="@string/pref_sort_by_title"
        android:summary="@string/pref_sort_by_summary" 
        android:entries="@array/sort_method"
        android:entryValues="@array/sort_method_values"
        android:dialogTitle="@string/menu_sort" />
    </PreferenceCategory>
  </PreferenceScreen>

  <PreferenceScreen android:title="@string/pref_log_service">
    <PreferenceCategory
      android:title="@string/pref_log_service">
      <EditTextPreference
        android:singleLine="true"
        android:key="logfile"
        android:title="@string/pref_logfile_title"
        android:summary="@string/pref_logfile_summary" />
      <CheckBoxPreference
        android:defaultValue="false"
        android:key="startServiceAtBoot"
        android:title="@string/pref_atboot_title"
        android:summary="@string/pref_atboot_summary" />
      <CheckBoxPreference
        android:defaultValue="false"
        android:key="startServiceAtStart"
        android:title="@string/pref_atstart_title"
        android:summary="@string/pref_atstart_summary" />
      <CheckBoxPreference
        android:defaultValue="false"
        android:key="stopServiceAtExit"
        android:title="@string/pref_atexit_title"
        android:summary="@string/pref_atexit_summary" />
      <CheckBoxPreference
        android:persistent="false"
        android:defaultValue="true"
        android:key="start_foreground"
        android:title="@string/pref_foreground_title"
        android:summary="@string/pref_foreground_summary" />
    </PreferenceCategory>
  </PreferenceScreen>

  <PreferenceScreen android:title="@string/pref_notifications">
    <PreferenceCategory
      android:title="@string/pref_notifications">
      <CheckBoxPreference
        android:defaultValue="false"
        android:key="notifications_statusbar"
        android:title="@string/pref_statusbar_title"
        android:summary="@string/pref_statusbar_summary" />
      <Preference
        android:persistent="false"
        android:key="notifications_statusbar_apps_dialog"
        android:title="@string/pref_choose_apps"
        android:summary="@string/pref_statusbar_apps_summary"
        android:dependency="notifications_statusbar"
        android:layout="?android:attr/preferenceLayoutChild" />
      <CheckBoxPreference
        android:defaultValue="false"
        android:key="notifications_toast"
        android:title="@string/pref_toast_title"
        android:summary="@string/pref_toast_summary" />
      <Preference
        android:persistent="false"
        android:key="notifications_toast_apps_dialog"
        android:title="@string/pref_choose_apps"
        android:summary="@string/pref_toast_apps_summary"
        android:dependency="notifications_toast"
        android:layout="?android:attr/preferenceLayoutChild" />
    </PreferenceCategory>
  </PreferenceScreen>

  <PreferenceScreen android:title="@string/pref_graphs">
    <PreferenceCategory
      android:title="@string/pref_graphs">
      <ListPreference
        android:persistent="false"
        android:key="interval_placeholder"
        android:title="@string/pref_interval_title"
        android:summary="@string/pref_interval_summary"
        android:dialogTitle="@string/interval_prompt" />
      <ListPreference
        android:persistent="false"
        android:key="viewsize_placeholder"
        android:title="@string/pref_viewsize_title"
        android:summary="@string/pref_viewsize_summary"
        android:dialogTitle="@string/viewsize_prompt" />
    </PreferenceCategory>
  </PreferenceScreen>

  <PreferenceScreen android:title="@string/pref_debugging">
    <PreferenceCategory
      android:title="@string/pref_debugging">
      <CheckBoxPreference
        android:defaultValue="false"
        android:key="logcat_debug"
        android:title="@string/pref_debug_title"
        android:summary="@string/pref_debug_summary" />
    </PreferenceCategory>
  </PreferenceScreen>
</PreferenceScreen>
