<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/interval"
    android:title="@string/interval_prompt">
    <menu>
      <group android:checkableBehavior="single">
        <item android:id="@+id/interval_1"
          android:title="@string/range_1ms" />
        <item android:id="@+id/interval_100"
          android:title="@string/range_100ms" />
        <item android:id="@+id/interval_500"
          android:title="@string/range_500ms" />
        <item android:id="@+id/interval_1000"
          android:title="@string/range_1sec" />
        <item android:id="@+id/interval_30000"
          android:title="@string/range_30sec" />
        <item android:id="@+id/interval_60000"
          android:title="@string/range_1min" />
        <item android:id="@+id/interval_300000"
          android:title="@string/range_5min" />
        <item android:id="@+id/interval_600000"
          android:title="@string/range_10min" />
        <item android:id="@+id/interval_900000"
          android:title="@string/range_15min" />
        <item android:id="@+id/interval_1800000"
          android:title="@string/range_30min" />
        <item android:id="@+id/interval_3600000"
          android:title="@string/range_1hour" />
        <item android:id="@+id/interval_7200000"
          android:title="@string/range_2hour" />
        <item android:id="@+id/interval_14400000"
          android:title="@string/range_4hour" />
        <item android:id="@+id/interval_28800000"
          android:title="@string/range_8hour" />
        <item android:id="@+id/interval_57600000"
          android:title="@string/range_16hour" />
        <item android:id="@+id/interval_115200000"
          android:title="@string/range_24hour" />
        <item android:id="@+id/interval_230400000"
          android:title="@string/range_48hour" />
      </group>
    </menu>
  </item>

  <item android:id="@+id/viewsize"
    android:title="@string/viewsize_prompt">
    <menu>
      <group android:checkableBehavior="single">
        <item android:id="@+id/viewsize_100"
          android:title="@string/range_100ms" />
        <item android:id="@+id/viewsize_500"
          android:title="@string/range_500ms" />
        <item android:id="@+id/viewsize_1000"
          android:title="@string/range_1sec" />
        <item android:id="@+id/viewsize_30000"
          android:title="@string/range_30sec" />
        <item android:id="@+id/viewsize_60000"
          android:title="@string/range_1min" />
        <item android:id="@+id/viewsize_300000"
          android:title="@string/range_5min" />
        <item android:id="@+id/viewsize_600000"
          android:title="@string/range_10min" />
        <item android:id="@+id/viewsize_900000"
          android:title="@string/range_15min" />
        <item android:id="@+id/viewsize_1800000"
          android:title="@string/range_30min" />
        <item android:id="@+id/viewsize_3600000"
          android:title="@string/range_1hour" />
        <item android:id="@+id/viewsize_7200000"
          android:title="@string/range_2hour" />
        <item android:id="@+id/viewsize_14400000"
          android:title="@string/range_4hour" />
        <item android:id="@+id/viewsize_28800000"
          android:title="@string/range_8hour" />
        <item android:id="@+id/viewsize_57600000"
          android:title="@string/range_16hour" />
        <item android:id="@+id/viewsize_115200000"
          android:title="@string/range_24hour" />
        <item android:id="@+id/viewsize_230400000"
          android:title="@string/range_48hour" />
      </group>
    </menu>
  </item>
</menu>
