<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:paddingLeft="6dp"
  android:paddingRight="6dp">

  <TextView
    android:id="@+id/exportInstructions"
    android:text="@string/export_instructions"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/exportStartDateText"
    android:text="@string/export_start_date"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/exportInstructions"
    android:layout_alignBaseline="@+id/exportStartDateButton" />

  <Button
    android:id="@+id/exportStartDateButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/exportInstructions" 
    style="?android:attr/borderlessButtonStyle"
    android:layout_toRightOf="@id/exportStartDateText"/>

  <TextView
    android:id="@+id/exportEndDateText"
    android:text="@string/export_end_date"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toLeftOf="@+id/exportEndDateButton" 
    android:layout_alignBaseline="@id/exportEndDateButton" />

  <Button
    android:id="@+id/exportEndDateButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/exportStartDateButton"
    style="?android:attr/borderlessButtonStyle"
    android:layout_alignLeft="@id/exportStartDateButton" />

  <View 
    android:id="@+id/divider"
    style="@style/Divider"
    android:layout_below="@id/exportEndDateButton" />

  <TextView
    android:id="@+id/exportFilenameText"
    android:text="@string/export_filename"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_alignBaseline="@+id/exportFilenameButton"
    android:layout_below="@id/divider"/>

  <Button
    android:id="@+id/exportFilenameButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@id/exportFilenameText"
    style="?android:attr/borderlessButtonStyle"
    android:gravity="left|center_vertical"
    android:layout_below="@id/divider" />
</RelativeLayout>
